# calc_module_interface

./: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  plotwindow.cpp  plotwindow.h  plotwindow.ui
.github/workflows/: build.yml
ci/astra/: Dockerfile  build.sh
